src/objects/Insider_Participation__c.object
<CustomObject>
    <fields>
        <fullName>Name_of_Insider__c</fullName>
        <label>Name of Insider</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Securities__c</fullName>
        <description>Number of Securities to be subscribed for/received by the Insider</description>
        <label>Number of Securities</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Issued__c</fullName>
        <description>Percentage of issued and outstanding Listed Shares on a post transaction basis</description>
        <label>Percentage of Issued</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Securities__c</fullName>
        <description>Percentage of Securities to be issued pursuant to the transaction</description>
        <label>Percentage of Securities</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reservation_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation Form</label>
        <referenceTo>Reservation_Form__c</referenceTo>
        <relationshipLabel>Insider Participations</relationshipLabel>
        <relationshipName>Insider_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Insider Participation</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Insider Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insider Participations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>